# VolatilityModel

./: .dvcignore  .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
config/: assets.yaml
data/: features.dvc  processed.dvc  raw.dvc
data/predictions/: predictions.parquet
infra/: .env.example  docker-compose.yml  mlflow-entrypoint.sh
infra/api/: Dockerfile
infra/mlflow/: Dockerfile
infra/postgres-init/: 01-create-databases.sh
pipelines/: __init__.py
reports/: baseline_eval.md  baseline_metrics.csv  ml_vs_baselines.csv  ml_vs_baselines.md
scripts/: eval_lgbm.py  generate_features.py  train_lgbm.py
src/volforecast/: __init__.py  cli.py  config.py
tests/: conftest.py
tests/fixtures/: crypto_gap.parquet  crypto_sample.parquet  equity_bad_weekend.parquet  equity_sample.parquet
tests/integration/: test_api.py
tests/smoke/: test_report.py
tests/unit/: test_baseline_alignment.py  test_checks.py  test_config.py  test_cross_asset.py  test_estimators.py  test_ewma.py  test_garch.py  test_har_rv.py  test_harness.py  test_ingest.py  test_lgbm_eval.py  test_lgbm_folds.py  test_lgbm_transforms.py  test_metrics.py  test_no_lookahead.py  test_pipeline.py  test_pipeline_features.py  test_prediction_log.py  test_range_estimators.py  test_regimes.py  test_report_baselines.py  test_report_e2e.py  test_schemas.py  test_shap_artifacts.py  test_skeleton_e2e.py  (+1 more)
(+73 files in other folders)
